--- a/ttlock-hass-integration/Dockerfile
+++ b/ttlock-hass-integration/Dockerfile
@@ -19,4 +19,4 @@ RUN cd /app && npm i
 
 ENTRYPOINT ["/app/start.sh"]
 
-LABEL io.hass.version="VERSION" io.hass.type="addon" io.hass.arch="armhf|aarch64|i386|amd64"
+LABEL io.hass.version="VERSION" io.hass.type="addon" io.hass.arch="armhf|aarch64|i386|amd64|aarch64-base"
